Fix tests to work with admin/ namespace

--- a/test/fixtures/funding_sources.yml
+++ b/test/fixtures/funding_sources.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  name: MyString
-  name_sw: MyString
+  id: 1
+  name: FundingSource1
+  name_sw: FundingSource1Sw
 
 two:
-  name: MyString
-  name_sw: MyString
+  id: 2
+  name: FundingSource2
+  name_sw: FundingSource2Sw
