--- a/config/database.yml
+++ b/config/database.yml
@@ -4,6 +4,7 @@ development:
   adapter: sqlite3
   database: db/development.sqlite3
   timeout: 5000
+  encoding: UTF8
 
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
@@ -12,8 +13,10 @@ test:
   adapter: sqlite3
   database: db/test.sqlite3
   timeout: 5000
+  encoding: UTF8
 
 production:
   adapter: sqlite3
   database: db/production.sqlite3
   timeout: 5000
+  encoding: UTF8
